Fixed z-index issue with button psuedolements

--- a/src/App.scss
+++ b/src/App.scss
@@ -101,6 +101,7 @@ a {
 }
 
 #convertCont {
+    position: relative;
 	display: flex;
 	flex-direction: column;
 	gap: 1rem;
@@ -111,6 +112,8 @@ a {
 
     height: 100dvh;
     scroll-behavior: auto;
+
+    z-index: 0;
 
 	--br: 16px;
 
@@ -291,7 +294,6 @@ a {
 				background: var(--dark-gray);
 				border-radius: var(--br);
 				z-index: -1;
-
 				will-change: auto;
 				transition: background 0.2s, inset 0.2s ease, box-shadow 0.2s ease;
 			}
